trying to fix ttests

--- a/src/azure-cli/azure/cli/command_modules/search/tests/latest/recordings/test_service_create_semantic_search.yaml
+++ b/src/azure-cli/azure/cli/command_modules/search/tests/latest/recordings/test_service_create_semantic_search.yaml
@@ -1,5 +1,49 @@
 interactions:
 - request:
+    body: null
+    headers:
+      Accept:
+      - application/json
+      Accept-Encoding:
+      - gzip, deflate
+      CommandName:
+      - search service create
+      Connection:
+      - keep-alive
+      ParameterSetName:
+      - -n -g --sku --semantic-search
+      User-Agent:
+      - AZURECLI/2.53.0 azsdk-python-azure-mgmt-resource/23.1.0b2 Python/3.10.11 (Windows-10-10.0.22621-SP0)
+    method: GET
+    uri: https://eastus2euap.management.azure.com/subscriptions/00000000-0000-0000-0000-000000000000/resourcegroups/azure_search_cli_test000001?api-version=2022-09-01
+  response:
+    body:
+      string: '{"id":"/subscriptions/00000000-0000-0000-0000-000000000000/resourceGroups/azure_search_cli_test000001","name":"azure_search_cli_test000001","type":"Microsoft.Resources/resourceGroups","location":"eastus2euap","tags":{"product":"azurecli","cause":"automation","test":"test_service_create_semantic_search","date":"2023-10-19T06:03:38Z","module":"search"},"properties":{"provisioningState":"Succeeded"}}'
+    headers:
+      cache-control:
+      - no-cache
+      content-length:
+      - '400'
+      content-type:
+      - application/json; charset=utf-8
+      date:
+      - Thu, 19 Oct 2023 06:03:40 GMT
+      expires:
+      - '-1'
+      pragma:
+      - no-cache
+      strict-transport-security:
+      - max-age=31536000; includeSubDomains
+      x-cache:
+      - CONFIG_NOCACHE
+      x-content-type-options:
+      - nosniff
+      x-msedge-ref:
+      - 'Ref A: E72ABF19E97144B6A03FFE2D9F97275B Ref B: CO6AA3150219047 Ref C: 2023-10-19T06:03:40Z'
+    status:
+      code: 200
+      message: OK
+- request:
     body: '{"location": "eastus2euap", "properties": {"hostingMode": "default", "partitionCount":
       1, "publicNetworkAccess": "enabled", "replicaCount": 1, "semanticSearch": "disabled"},
       "sku": {"name": "standard"}}'
@@ -17,7 +61,7 @@ interactions:
       Content-Type:
       - application/json
       ParameterSetName:
-      - -n -g --sku --location --semantic-search
+      - -n -g --sku --semantic-search
       User-Agent:
       - AZURECLI/2.53.0 (AAZ) azsdk-python-core/1.26.0 Python/3.10.11 (Windows-10-10.0.22621-SP0)
     method: PUT
@@ -34,17 +78,17 @@ interactions:
       content-type:
       - application/json; charset=utf-8
       date:
-      - Wed, 18 Oct 2023 18:07:10 GMT
+      - Thu, 19 Oct 2023 06:03:43 GMT
       elapsed-time:
-      - '4254'
+      - '3092'
       etag:
-      - W/"datetime'2023-10-18T18%3A07%3A10.2665943Z'"
+      - W/"datetime'2023-10-19T06%3A03%3A43.6119099Z'"
       expires:
       - '-1'
       pragma:
       - no-cache
       request-id:
-      - 254ad384-6de1-11ee-a27f-000d3aff5613
+      - 401a98b1-6e45-11ee-b1c2-000d3aff5613
       strict-transport-security:
       - max-age=31536000; includeSubDomains
       x-cache:
@@ -52,14 +96,58 @@ interactions:
       x-content-type-options:
       - nosniff
       x-ms-operation-identifier:
-      - tenantId=72f988bf-86f1-41af-91ab-2d7cd011db47,objectId=44e5f686-35a1-4e2c-9ff3-7b6adafcd3c3/eastus2euap/9af1c805-cad0-43de-995c-5e7b2b8e1680
+      - tenantId=72f988bf-86f1-41af-91ab-2d7cd011db47,objectId=44e5f686-35a1-4e2c-9ff3-7b6adafcd3c3/eastus2euap/c8218b22-3348-4c97-817d-a101fa7f980d
       x-ms-ratelimit-remaining-subscription-writes:
-      - '1191'
+      - '1197'
       x-msedge-ref:
-      - 'Ref A: 2A7A68F982A84A849870E819370FB951 Ref B: CO6AA3150220039 Ref C: 2023-10-18T18:07:05Z'
+      - 'Ref A: 02C4B46CD76F4078990A0299DC76644A Ref B: CO6AA3150219051 Ref C: 2023-10-19T06:03:40Z'
     status:
       code: 201
       message: Created
+- request:
+    body: null
+    headers:
+      Accept:
+      - application/json
+      Accept-Encoding:
+      - gzip, deflate
+      CommandName:
+      - search service create
+      Connection:
+      - keep-alive
+      ParameterSetName:
+      - -n -g --sku --semantic-search
+      User-Agent:
+      - AZURECLI/2.53.0 azsdk-python-azure-mgmt-resource/23.1.0b2 Python/3.10.11 (Windows-10-10.0.22621-SP0)
+    method: GET
+    uri: https://eastus2euap.management.azure.com/subscriptions/00000000-0000-0000-0000-000000000000/resourcegroups/azure_search_cli_test000001?api-version=2022-09-01
+  response:
+    body:
+      string: '{"id":"/subscriptions/00000000-0000-0000-0000-000000000000/resourceGroups/azure_search_cli_test000001","name":"azure_search_cli_test000001","type":"Microsoft.Resources/resourceGroups","location":"eastus2euap","tags":{"product":"azurecli","cause":"automation","test":"test_service_create_semantic_search","date":"2023-10-19T06:03:38Z","module":"search"},"properties":{"provisioningState":"Succeeded"}}'
+    headers:
+      cache-control:
+      - no-cache
+      content-length:
+      - '400'
+      content-type:
+      - application/json; charset=utf-8
+      date:
+      - Thu, 19 Oct 2023 06:03:43 GMT
+      expires:
+      - '-1'
+      pragma:
+      - no-cache
+      strict-transport-security:
+      - max-age=31536000; includeSubDomains
+      x-cache:
+      - CONFIG_NOCACHE
+      x-content-type-options:
+      - nosniff
+      x-msedge-ref:
+      - 'Ref A: B07CFA64FB1A4F0E9D444D1D148ABF5C Ref B: CO6AA3150219039 Ref C: 2023-10-19T06:03:44Z'
+    status:
+      code: 200
+      message: OK
 - request:
     body: '{"location": "eastus2euap", "properties": {"hostingMode": "default", "partitionCount":
       1, "publicNetworkAccess": "enabled", "replicaCount": 1, "semanticSearch": "free"},
@@ -78,7 +166,7 @@ interactions:
       Content-Type:
       - application/json
       ParameterSetName:
-      - -n -g --sku --location --semantic-search
+      - -n -g --sku --semantic-search
       User-Agent:
       - AZURECLI/2.53.0 (AAZ) azsdk-python-core/1.26.0 Python/3.10.11 (Windows-10-10.0.22621-SP0)
     method: PUT
@@ -95,17 +183,17 @@ interactions:
       content-type:
       - application/json; charset=utf-8
       date:
-      - Wed, 18 Oct 2023 18:07:10 GMT
+      - Thu, 19 Oct 2023 06:03:44 GMT
       elapsed-time:
-      - '455'
+      - '370'
       etag:
-      - W/"datetime'2023-10-18T18%3A07%3A11.1952988Z'"
+      - W/"datetime'2023-10-19T06%3A03%3A44.7684001Z'"
       expires:
       - '-1'
       pragma:
       - no-cache
       request-id:
-      - 2854a98c-6de1-11ee-9582-000d3aff5613
+      - 425d696a-6e45-11ee-b9ca-000d3aff5613
       strict-transport-security:
       - max-age=31536000; includeSubDomains
       x-cache:
@@ -113,11 +201,55 @@ interactions:
       x-content-type-options:
       - nosniff
       x-ms-operation-identifier:
-      - tenantId=72f988bf-86f1-41af-91ab-2d7cd011db47,objectId=44e5f686-35a1-4e2c-9ff3-7b6adafcd3c3/eastus2euap/72a38b2f-c300-46d3-8a2f-f36714e19d1b
+      - tenantId=72f988bf-86f1-41af-91ab-2d7cd011db47,objectId=44e5f686-35a1-4e2c-9ff3-7b6adafcd3c3/eastus2euap/59bda5bd-c13f-4481-a491-7c74371b2c56
       x-ms-ratelimit-remaining-subscription-writes:
-      - '1198'
+      - '1196'
       x-msedge-ref:
-      - 'Ref A: 6B2B02FBAA2046D9965D75A1955EC53F Ref B: CO6AA3150219039 Ref C: 2023-10-18T18:07:10Z'
+      - 'Ref A: A8C8959AA52048C4887922D0FAB31EE8 Ref B: CO6AA3150219029 Ref C: 2023-10-19T06:03:44Z'
+    status:
+      code: 200
+      message: OK
+- request:
+    body: null
+    headers:
+      Accept:
+      - application/json
+      Accept-Encoding:
+      - gzip, deflate
+      CommandName:
+      - search service create
+      Connection:
+      - keep-alive
+      ParameterSetName:
+      - -n -g --sku --semantic-search
+      User-Agent:
+      - AZURECLI/2.53.0 azsdk-python-azure-mgmt-resource/23.1.0b2 Python/3.10.11 (Windows-10-10.0.22621-SP0)
+    method: GET
+    uri: https://eastus2euap.management.azure.com/subscriptions/00000000-0000-0000-0000-000000000000/resourcegroups/azure_search_cli_test000001?api-version=2022-09-01
+  response:
+    body:
+      string: '{"id":"/subscriptions/00000000-0000-0000-0000-000000000000/resourceGroups/azure_search_cli_test000001","name":"azure_search_cli_test000001","type":"Microsoft.Resources/resourceGroups","location":"eastus2euap","tags":{"product":"azurecli","cause":"automation","test":"test_service_create_semantic_search","date":"2023-10-19T06:03:38Z","module":"search"},"properties":{"provisioningState":"Succeeded"}}'
+    headers:
+      cache-control:
+      - no-cache
+      content-length:
+      - '400'
+      content-type:
+      - application/json; charset=utf-8
+      date:
+      - Thu, 19 Oct 2023 06:03:44 GMT
+      expires:
+      - '-1'
+      pragma:
+      - no-cache
+      strict-transport-security:
+      - max-age=31536000; includeSubDomains
+      x-cache:
+      - CONFIG_NOCACHE
+      x-content-type-options:
+      - nosniff
+      x-msedge-ref:
+      - 'Ref A: C4C0F98439AF459C81FD20D371E5437E Ref B: CO6AA3150220051 Ref C: 2023-10-19T06:03:45Z'
     status:
       code: 200
       message: OK
@@ -139,7 +271,7 @@ interactions:
       Content-Type:
       - application/json
       ParameterSetName:
-      - -n -g --sku --location --semantic-search
+      - -n -g --sku --semantic-search
       User-Agent:
       - AZURECLI/2.53.0 (AAZ) azsdk-python-core/1.26.0 Python/3.10.11 (Windows-10-10.0.22621-SP0)
     method: PUT
@@ -156,17 +288,17 @@ interactions:
       content-type:
       - application/json; charset=utf-8
       date:
-      - Wed, 18 Oct 2023 18:07:11 GMT
+      - Thu, 19 Oct 2023 06:03:46 GMT
       elapsed-time:
-      - '438'
+      - '330'
       etag:
-      - W/"datetime'2023-10-18T18%3A07%3A12.3309371Z'"
+      - W/"datetime'2023-10-19T06%3A03%3A46.6495701Z'"
       expires:
       - '-1'
       pragma:
       - no-cache
       request-id:
-      - 28f13112-6de1-11ee-904b-000d3aff5613
+      - 43145aa6-6e45-11ee-b134-000d3aff5613
       strict-transport-security:
       - max-age=31536000; includeSubDomains
       x-cache:
@@ -174,11 +306,11 @@ interactions:
       x-content-type-options:
       - nosniff
       x-ms-operation-identifier:
-      - tenantId=72f988bf-86f1-41af-91ab-2d7cd011db47,objectId=44e5f686-35a1-4e2c-9ff3-7b6adafcd3c3/eastus2euap/c347d56b-9a80-4c7a-8af0-5667c3abbcb3
+      - tenantId=72f988bf-86f1-41af-91ab-2d7cd011db47,objectId=44e5f686-35a1-4e2c-9ff3-7b6adafcd3c3/eastus2euap/c57e44b1-5b6c-45fc-8200-500cbf944023
       x-ms-ratelimit-remaining-subscription-writes:
       - '1199'
       x-msedge-ref:
-      - 'Ref A: 405FEA7AA26F445B986E3E65CC694B17 Ref B: CO6AA3150218033 Ref C: 2023-10-18T18:07:11Z'
+      - 'Ref A: 2AB2291E6EC24150A03F929A349AE50C Ref B: CO6AA3150220047 Ref C: 2023-10-19T06:03:45Z'
     status:
       code: 200
       message: OK
