cherry-pick appsettings fix

--- a/src/azure-cli/azure/cli/command_modules/appservice/tests/latest/recordings/test_functionapp_on_linux_version_error.yaml
+++ b/src/azure-cli/azure/cli/command_modules/appservice/tests/latest/recordings/test_functionapp_on_linux_version_error.yaml
@@ -23,7 +23,7 @@ interactions:
       cache-control:
       - no-cache
       content-length:
-      - '310'
+      - '381'
       content-type:
       - application/json; charset=utf-8
       date:
@@ -34,6 +34,8 @@ interactions:
       - no-cache
       strict-transport-security:
       - max-age=31536000; includeSubDomains
+      vary:
+      - Accept-Encoding
       vary:
       - Accept-Encoding
       x-content-type-options:
@@ -72,7 +74,7 @@ interactions:
       cache-control:
       - no-cache
       content-length:
-      - '1500'
+      - '1620'
       content-type:
       - application/json
       date:
@@ -87,6 +89,10 @@ interactions:
       - Microsoft-IIS/10.0
       strict-transport-security:
       - max-age=31536000; includeSubDomains
+      transfer-encoding:
+      - chunked
+      vary:
+      - Accept-Encoding
       transfer-encoding:
       - chunked
       vary:
@@ -128,7 +134,7 @@ interactions:
       cache-control:
       - no-cache
       content-length:
-      - '1426'
+      - '1540'
       content-type:
       - application/json
       date:
@@ -141,6 +147,10 @@ interactions:
       - Microsoft-IIS/10.0
       strict-transport-security:
       - max-age=31536000; includeSubDomains
+      transfer-encoding:
+      - chunked
+      vary:
+      - Accept-Encoding
       transfer-encoding:
       - chunked
       vary:
