Fix linter issues

--- a/linter_exclusions.yml
+++ b/linter_exclusions.yml
@@ -942,6 +942,11 @@ backup restore restore-disks:
     storage_account_resource_group:
       rule_exclusions:
       - option_length_too_long
+backup vault update:
+  parameters:
+    cross_subscription_restore_state:
+      rule_exclusions:
+      - option_length_too_long
 backup vault create:
   parameters:
     cross_subscription_restore_state:
