--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -28,7 +28,12 @@
             "program": "${workspaceRoot}/src/azure-cli/azure/cli/__main__.py",
             "cwd": "${workspaceRoot}",
             "args": [
-                "--help"
+                "afd",
+                "profile",
+                "list",
+                "-g",
+                "bo-private",
+                "--debug"
             ],
             "console": "externalTerminal",
             "debugOptions": [
