--- a/src/azure-cli/azure/cli/command_modules/vm/linter_exclusions.yml
+++ b/src/azure-cli/azure/cli/command_modules/vm/linter_exclusions.yml
@@ -169,4 +169,9 @@ sig image-version undelete:
         allow_replicated_location_deletion:
             rule_exclusions:
             - option_length_too_long
+disk create:
+    parameters:
+        optimized_for_frequent_attach:
+            rule_exclusions:
+            - option_length_too_long
 ...
