--- a/src/azure-cli/azure/cli/command_modules/vm/linter_exclusions.yml
+++ b/src/azure-cli/azure/cli/command_modules/vm/linter_exclusions.yml
@@ -192,4 +192,9 @@ restore-point create:
         source_data_disk_resource:
             rule_exclusions:
                 - option_length_too_long
+disk create:
+    parameters:
+        optimized_for_frequent_attach:
+            rule_exclusions:
+            - option_length_too_long
 ...
