fix rule action and condition

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -28,12 +28,7 @@
             "program": "${workspaceRoot}/src/azure-cli/azure/cli/__main__.py",
             "cwd": "${workspaceRoot}",
             "args": [
-                "afd",
-                "profile",
-                "list",
-                "-g",
-                "bo-private",
-                "--debug"
+                "--help"
             ],
             "console": "externalTerminal",
             "debugOptions": [
