--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -28,6 +28,9 @@
             "program": "${workspaceRoot}/src/azure-cli/azure/cli/__main__.py",
             "cwd": "${workspaceRoot}",
             "args": [
+                "afd",
+                "rule",
+                "create",
                 "--help"
             ],
             "console": "externalTerminal",
