--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -29,9 +29,16 @@
             "cwd": "${workspaceRoot}",
             "args": [
                 "afd",
-                "rule",
+                "secret",
                 "create",
-                "--help"
+                "-g",
+                "bo-private",
+                "-n",
+                "test111",
+                "--profile-name",
+                "bundle-petest",
+                "--secret-source",
+                "/subscriptions/27cafca8-b9a4-4264-b399-45d0c9cca1ab/resourceGroups/bo-private/providers/Microsoft.Cdn/profiles/bundle-petest/secretmgnt"
             ],
             "console": "externalTerminal",
             "debugOptions": [
