add security policy

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -28,17 +28,7 @@
             "program": "${workspaceRoot}/src/azure-cli/azure/cli/__main__.py",
             "cwd": "${workspaceRoot}",
             "args": [
-                "afd",
-                "secret",
-                "create",
-                "-g",
-                "bo-private",
-                "-n",
-                "test111",
-                "--profile-name",
-                "bundle-petest",
-                "--secret-source",
-                "/subscriptions/27cafca8-b9a4-4264-b399-45d0c9cca1ab/resourceGroups/bo-private/providers/Microsoft.Cdn/profiles/bundle-petest/secretmgnt"
+                "--help"
             ],
             "console": "externalTerminal",
             "debugOptions": [
