--- a/src/azure-cli/requirements.py3.windows.txt
+++ b/src/azure-cli/requirements.py3.windows.txt
@@ -74,7 +74,7 @@ azure-mgmt-servicebus==8.2.0
 azure-mgmt-servicefabric==1.0.0
 azure-mgmt-servicefabricmanagedclusters==1.0.0
 azure-mgmt-servicelinker==1.2.0b1
-azure-mgmt-sql==4.0.0b12
+azure-mgmt-sql==0.9.0
 azure-mgmt-signalr==2.0.0b1
 azure-mgmt-sqlvirtualmachine==1.0.0b5
 azure-mgmt-storage==21.1.0
