--- a/src/azure-cli/azure/cli/command_modules/sql/tests/latest/recordings/test_sql_per_db_cmk.yaml
+++ b/src/azure-cli/azure/cli/command_modules/sql/tests/latest/recordings/test_sql_per_db_cmk.yaml
@@ -14,9 +14,9 @@ interactions:
       - -g --server --name -i --encryption-protector --user-assigned-identity-id --encryption-protector-auto-rotation
         --yes
       User-Agent:
-      - AZURECLI/2.51.0 azsdk-python-mgmt-sql/0.9.0 Python/3.9.13 (Windows-10-10.0.22621-SP0)
+      - AZURECLI/2.54.0 azsdk-python-mgmt-sql/4.0.0b13 Python/3.8.0 (Windows-10-10.0.17763-SP0)
     method: GET
-    uri: https://management.azure.com/subscriptions/00000000-0000-0000-0000-000000000000/resourceGroups/pstest/providers/Microsoft.Sql/servers/pstestsvr?api-version=2022-08-01-preview
+    uri: https://management.azure.com/subscriptions/00000000-0000-0000-0000-000000000000/resourceGroups/pstest/providers/Microsoft.Sql/servers/pstestsvr?api-version=2023-02-01-preview
   response:
     body:
       string: '{"kind":"v12.0","properties":{"administratorLogin":"cloudSA","version":"12.0","state":"Ready","fullyQualifiedDomainName":"pstestsvr.database.windows.net","privateEndpointConnections":[],"minimalTlsVersion":"1.2","publicNetworkAccess":"Enabled","restrictOutboundNetworkAccess":"Disabled","externalGovernanceStatus":"Disabled"},"location":"eastus","tags":{},"id":"/subscriptions/00000000-0000-0000-0000-000000000000/resourceGroups/pstest/providers/Microsoft.Sql/servers/pstestsvr","name":"pstestsvr","type":"Microsoft.Sql/servers"}'
@@ -59,9 +59,9 @@ interactions:
       - -g --server --name -i --encryption-protector --user-assigned-identity-id --encryption-protector-auto-rotation
         --yes
       User-Agent:
-      - AZURECLI/2.51.0 azsdk-python-mgmt-sql/0.9.0 Python/3.9.13 (Windows-10-10.0.22621-SP0)
+      - AZURECLI/2.54.0 azsdk-python-mgmt-sql/4.0.0b13 Python/3.8.0 (Windows-10-10.0.17763-SP0)
     method: GET
-    uri: https://management.azure.com/subscriptions/00000000-0000-0000-0000-000000000000/resourceGroups/pstest/providers/Microsoft.Sql/servers/pstestsvr?api-version=2022-08-01-preview
+    uri: https://management.azure.com/subscriptions/00000000-0000-0000-0000-000000000000/resourceGroups/pstest/providers/Microsoft.Sql/servers/pstestsvr?api-version=2023-02-01-preview
   response:
     body:
       string: '{"kind":"v12.0","properties":{"administratorLogin":"cloudSA","version":"12.0","state":"Ready","fullyQualifiedDomainName":"pstestsvr.database.windows.net","privateEndpointConnections":[],"minimalTlsVersion":"1.2","publicNetworkAccess":"Enabled","restrictOutboundNetworkAccess":"Disabled","externalGovernanceStatus":"Disabled"},"location":"eastus","tags":{},"id":"/subscriptions/00000000-0000-0000-0000-000000000000/resourceGroups/pstest/providers/Microsoft.Sql/servers/pstestsvr","name":"pstestsvr","type":"Microsoft.Sql/servers"}'
@@ -111,7 +111,7 @@ interactions:
       - -g --server --name -i --encryption-protector --user-assigned-identity-id --encryption-protector-auto-rotation
         --yes
       User-Agent:
-      - AZURECLI/2.51.0 azsdk-python-mgmt-sql/0.9.0 Python/3.9.13 (Windows-10-10.0.22621-SP0)
+      - AZURECLI/2.54.0 azsdk-python-mgmt-sql/4.0.0b13 Python/3.8.0 (Windows-10-10.0.17763-SP0)
     method: PUT
     uri: https://management.azure.com/subscriptions/00000000-0000-0000-0000-000000000000/resourceGroups/pstest/providers/Microsoft.Sql/servers/pstestsvr/databases/cliautomationdb051?api-version=2023-02-01-preview
   response:
@@ -162,7 +162,7 @@ interactions:
       - -g --server --name -i --encryption-protector --user-assigned-identity-id --encryption-protector-auto-rotation
         --yes
       User-Agent:
-      - AZURECLI/2.51.0 azsdk-python-mgmt-sql/0.9.0 Python/3.9.13 (Windows-10-10.0.22621-SP0)
+      - AZURECLI/2.54.0 azsdk-python-mgmt-sql/4.0.0b13 Python/3.8.0 (Windows-10-10.0.17763-SP0)
     method: GET
     uri: https://management.azure.com/subscriptions/00000000-0000-0000-0000-000000000000/resourceGroups/pstest/providers/Microsoft.Sql/locations/eastus/databaseAzureAsyncOperation/2fcac8db-313c-44e1-a056-42457d4b3551?api-version=2023-02-01-preview
   response:
@@ -207,7 +207,7 @@ interactions:
       - -g --server --name -i --encryption-protector --user-assigned-identity-id --encryption-protector-auto-rotation
         --yes
       User-Agent:
-      - AZURECLI/2.51.0 azsdk-python-mgmt-sql/0.9.0 Python/3.9.13 (Windows-10-10.0.22621-SP0)
+      - AZURECLI/2.54.0 azsdk-python-mgmt-sql/4.0.0b13 Python/3.8.0 (Windows-10-10.0.17763-SP0)
     method: GET
     uri: https://management.azure.com/subscriptions/00000000-0000-0000-0000-000000000000/resourceGroups/pstest/providers/Microsoft.Sql/locations/eastus/databaseAzureAsyncOperation/2fcac8db-313c-44e1-a056-42457d4b3551?api-version=2023-02-01-preview
   response:
@@ -252,7 +252,7 @@ interactions:
       - -g --server --name -i --encryption-protector --user-assigned-identity-id --encryption-protector-auto-rotation
         --yes
       User-Agent:
-      - AZURECLI/2.51.0 azsdk-python-mgmt-sql/0.9.0 Python/3.9.13 (Windows-10-10.0.22621-SP0)
+      - AZURECLI/2.54.0 azsdk-python-mgmt-sql/4.0.0b13 Python/3.8.0 (Windows-10-10.0.17763-SP0)
     method: GET
     uri: https://management.azure.com/subscriptions/00000000-0000-0000-0000-000000000000/resourceGroups/pstest/providers/Microsoft.Sql/locations/eastus/databaseAzureAsyncOperation/2fcac8db-313c-44e1-a056-42457d4b3551?api-version=2023-02-01-preview
   response:
@@ -297,7 +297,7 @@ interactions:
       - -g --server --name -i --encryption-protector --user-assigned-identity-id --encryption-protector-auto-rotation
         --yes
       User-Agent:
-      - AZURECLI/2.51.0 azsdk-python-mgmt-sql/0.9.0 Python/3.9.13 (Windows-10-10.0.22621-SP0)
+      - AZURECLI/2.54.0 azsdk-python-mgmt-sql/4.0.0b13 Python/3.8.0 (Windows-10-10.0.17763-SP0)
     method: GET
     uri: https://management.azure.com/subscriptions/00000000-0000-0000-0000-000000000000/resourceGroups/pstest/providers/Microsoft.Sql/locations/eastus/databaseAzureAsyncOperation/2fcac8db-313c-44e1-a056-42457d4b3551?api-version=2023-02-01-preview
   response:
@@ -342,7 +342,7 @@ interactions:
       - -g --server --name -i --encryption-protector --user-assigned-identity-id --encryption-protector-auto-rotation
         --yes
       User-Agent:
-      - AZURECLI/2.51.0 azsdk-python-mgmt-sql/0.9.0 Python/3.9.13 (Windows-10-10.0.22621-SP0)
+      - AZURECLI/2.54.0 azsdk-python-mgmt-sql/4.0.0b13 Python/3.8.0 (Windows-10-10.0.17763-SP0)
     method: GET
     uri: https://management.azure.com/subscriptions/00000000-0000-0000-0000-000000000000/resourceGroups/pstest/providers/Microsoft.Sql/locations/eastus/databaseAzureAsyncOperation/2fcac8db-313c-44e1-a056-42457d4b3551?api-version=2023-02-01-preview
   response:
@@ -387,7 +387,7 @@ interactions:
       - -g --server --name -i --encryption-protector --user-assigned-identity-id --encryption-protector-auto-rotation
         --yes
       User-Agent:
-      - AZURECLI/2.51.0 azsdk-python-mgmt-sql/0.9.0 Python/3.9.13 (Windows-10-10.0.22621-SP0)
+      - AZURECLI/2.54.0 azsdk-python-mgmt-sql/4.0.0b13 Python/3.8.0 (Windows-10-10.0.17763-SP0)
     method: GET
     uri: https://management.azure.com/subscriptions/00000000-0000-0000-0000-000000000000/resourceGroups/pstest/providers/Microsoft.Sql/servers/pstestsvr/databases/cliautomationdb051?api-version=2023-02-01-preview
   response:
@@ -431,7 +431,7 @@ interactions:
       ParameterSetName:
       - -g -s --name
       User-Agent:
-      - AZURECLI/2.51.0 azsdk-python-mgmt-sql/0.9.0 Python/3.9.13 (Windows-10-10.0.22621-SP0)
+      - AZURECLI/2.54.0 azsdk-python-mgmt-sql/4.0.0b13 Python/3.8.0 (Windows-10-10.0.17763-SP0)
     method: GET
     uri: https://management.azure.com/subscriptions/00000000-0000-0000-0000-000000000000/resourceGroups/pstest/providers/Microsoft.Sql/servers/pstestsvr/databases/cliautomationdb051?api-version=2023-02-01-preview
   response:
@@ -475,7 +475,7 @@ interactions:
       ParameterSetName:
       - -g --server --name -i --encryption-protector --epauto
       User-Agent:
-      - AZURECLI/2.51.0 azsdk-python-mgmt-sql/0.9.0 Python/3.9.13 (Windows-10-10.0.22621-SP0)
+      - AZURECLI/2.54.0 azsdk-python-mgmt-sql/4.0.0b13 Python/3.8.0 (Windows-10-10.0.17763-SP0)
     method: GET
     uri: https://management.azure.com/subscriptions/00000000-0000-0000-0000-000000000000/resourceGroups/pstest/providers/Microsoft.Sql/servers/pstestsvr/databases/cliautomationdb051?api-version=2023-02-01-preview
   response:
@@ -519,9 +519,9 @@ interactions:
       ParameterSetName:
       - -g --server --name -i --encryption-protector --epauto
       User-Agent:
-      - AZURECLI/2.51.0 azsdk-python-mgmt-sql/0.9.0 Python/3.9.13 (Windows-10-10.0.22621-SP0)
+      - AZURECLI/2.54.0 azsdk-python-mgmt-sql/4.0.0b13 Python/3.8.0 (Windows-10-10.0.17763-SP0)
     method: GET
-    uri: https://management.azure.com/subscriptions/00000000-0000-0000-0000-000000000000/resourceGroups/pstest/providers/Microsoft.Sql/servers/pstestsvr?api-version=2022-08-01-preview
+    uri: https://management.azure.com/subscriptions/00000000-0000-0000-0000-000000000000/resourceGroups/pstest/providers/Microsoft.Sql/servers/pstestsvr?api-version=2023-02-01-preview
   response:
     body:
       string: '{"kind":"v12.0","properties":{"administratorLogin":"cloudSA","version":"12.0","state":"Ready","fullyQualifiedDomainName":"pstestsvr.database.windows.net","privateEndpointConnections":[],"minimalTlsVersion":"1.2","publicNetworkAccess":"Enabled","restrictOutboundNetworkAccess":"Disabled","externalGovernanceStatus":"Disabled"},"location":"eastus","tags":{},"id":"/subscriptions/00000000-0000-0000-0000-000000000000/resourceGroups/pstest/providers/Microsoft.Sql/servers/pstestsvr","name":"pstestsvr","type":"Microsoft.Sql/servers"}'
@@ -574,7 +574,7 @@ interactions:
       ParameterSetName:
       - -g --server --name -i --encryption-protector --epauto
       User-Agent:
-      - AZURECLI/2.51.0 azsdk-python-mgmt-sql/0.9.0 Python/3.9.13 (Windows-10-10.0.22621-SP0)
+      - AZURECLI/2.54.0 azsdk-python-mgmt-sql/4.0.0b13 Python/3.8.0 (Windows-10-10.0.17763-SP0)
     method: PUT
     uri: https://management.azure.com/subscriptions/00000000-0000-0000-0000-000000000000/resourceGroups/pstest/providers/Microsoft.Sql/servers/pstestsvr/databases/cliautomationdb051?api-version=2023-02-01-preview
   response:
@@ -624,7 +624,7 @@ interactions:
       ParameterSetName:
       - -g --server --name -i --encryption-protector --epauto
       User-Agent:
-      - AZURECLI/2.51.0 azsdk-python-mgmt-sql/0.9.0 Python/3.9.13 (Windows-10-10.0.22621-SP0)
+      - AZURECLI/2.54.0 azsdk-python-mgmt-sql/4.0.0b13 Python/3.8.0 (Windows-10-10.0.17763-SP0)
     method: GET
     uri: https://management.azure.com/subscriptions/00000000-0000-0000-0000-000000000000/resourceGroups/pstest/providers/Microsoft.Sql/locations/eastus/databaseAzureAsyncOperation/8c1b2d98-5991-4967-a93f-3bc89b320823?api-version=2023-02-01-preview
   response:
@@ -668,7 +668,7 @@ interactions:
       ParameterSetName:
       - -g --server --name -i --encryption-protector --epauto
       User-Agent:
-      - AZURECLI/2.51.0 azsdk-python-mgmt-sql/0.9.0 Python/3.9.13 (Windows-10-10.0.22621-SP0)
+      - AZURECLI/2.54.0 azsdk-python-mgmt-sql/4.0.0b13 Python/3.8.0 (Windows-10-10.0.17763-SP0)
     method: GET
     uri: https://management.azure.com/subscriptions/00000000-0000-0000-0000-000000000000/resourceGroups/pstest/providers/Microsoft.Sql/locations/eastus/databaseAzureAsyncOperation/8c1b2d98-5991-4967-a93f-3bc89b320823?api-version=2023-02-01-preview
   response:
@@ -712,7 +712,7 @@ interactions:
       ParameterSetName:
       - -g --server --name -i --encryption-protector --epauto
       User-Agent:
-      - AZURECLI/2.51.0 azsdk-python-mgmt-sql/0.9.0 Python/3.9.13 (Windows-10-10.0.22621-SP0)
+      - AZURECLI/2.54.0 azsdk-python-mgmt-sql/4.0.0b13 Python/3.8.0 (Windows-10-10.0.17763-SP0)
     method: GET
     uri: https://management.azure.com/subscriptions/00000000-0000-0000-0000-000000000000/resourceGroups/pstest/providers/Microsoft.Sql/servers/pstestsvr/databases/cliautomationdb051?api-version=2023-02-01-preview
   response:
@@ -756,7 +756,7 @@ interactions:
       ParameterSetName:
       - -g -s --name
       User-Agent:
-      - AZURECLI/2.51.0 azsdk-python-mgmt-sql/0.9.0 Python/3.9.13 (Windows-10-10.0.22621-SP0)
+      - AZURECLI/2.54.0 azsdk-python-mgmt-sql/4.0.0b13 Python/3.8.0 (Windows-10-10.0.17763-SP0)
     method: GET
     uri: https://management.azure.com/subscriptions/00000000-0000-0000-0000-000000000000/resourceGroups/pstest/providers/Microsoft.Sql/servers/pstestsvr/databases/cliautomationdb051?api-version=2023-02-01-preview
   response:
