--- a/src/azure-cli/azure/cli/command_modules/storage/tests/latest/recordings/test_storage_blob_append.yaml
+++ b/src/azure-cli/azure/cli/command_modules/storage/tests/latest/recordings/test_storage_blob_append.yaml
@@ -15,13 +15,13 @@ interactions:
       ParameterSetName:
       - -n -g --query -o
       User-Agent:
-      - AZURECLI/2.53.0 azsdk-python-azure-mgmt-storage/21.1.0 Python/3.10.13 (Linux-5.15.0-1047-azure-x86_64-with-glibc2.31)
-        VSTS_7b238909-6802-4b65-b90d-184bca47f458_build_220_0
+      - AZURECLI/2.54.0 (PIP) azsdk-python-azure-mgmt-storage/21.1.0 Python/3.9.13
+        (Windows-10-10.0.19045-SP0)
     method: POST
     uri: https://management.azure.com/subscriptions/00000000-0000-0000-0000-000000000000/resourceGroups/clitest.rg000001/providers/Microsoft.Storage/storageAccounts/clitest000002/listKeys?api-version=2023-01-01&$expand=kerb
   response:
     body:
-      string: '{"keys":[{"creationTime":"2023-10-19T09:07:11.0288790Z","keyName":"key1","value":"veryFakedStorageAccountKey==","permissions":"FULL"},{"creationTime":"2023-10-19T09:07:11.0288790Z","keyName":"key2","value":"veryFakedStorageAccountKey==","permissions":"FULL"}]}'
+      string: '{"keys":[{"creationTime":"2023-11-20T09:22:08.0969957Z","keyName":"key1","value":"veryFakedStorageAccountKey==","permissions":"FULL"},{"creationTime":"2023-11-20T09:22:08.0969957Z","keyName":"key2","value":"veryFakedStorageAccountKey==","permissions":"FULL"}]}'
     headers:
       cache-control:
       - no-cache
@@ -30,7 +30,7 @@ interactions:
       content-type:
       - application/json
       date:
-      - Thu, 19 Oct 2023 09:07:32 GMT
+      - Mon, 20 Nov 2023 09:22:42 GMT
       expires:
       - '-1'
       pragma:
@@ -45,8 +45,10 @@ interactions:
       - Accept-Encoding
       x-content-type-options:
       - nosniff
+      x-ms-operation-identifier:
+      - tenantId=54826b22-38d6-4fb2-bad9-b7b93a3e9c5a,objectId=a7250e3a-0e5e-48e2-9a34-45f1f5e1a91e/eastus2euap/a9a135ae-b389-48b0-955f-4b7440261734
       x-ms-ratelimit-remaining-subscription-resource-requests:
-      - '11992'
+      - '11998'
     status:
       code: 200
       message: OK
@@ -66,10 +68,9 @@ interactions:
       ParameterSetName:
       - -n --account-name --account-key
       User-Agent:
-      - AZURECLI/2.53.0 azsdk-python-storage-blob/12.16.0 Python/3.10.13 (Linux-5.15.0-1047-azure-x86_64-with-glibc2.31)
-        VSTS_7b238909-6802-4b65-b90d-184bca47f458_build_220_0
+      - AZURECLI/2.54.0 (PIP) azsdk-python-storage-blob/12.16.0 Python/3.9.13 (Windows-10-10.0.19045-SP0)
       x-ms-date:
-      - Thu, 19 Oct 2023 09:07:32 GMT
+      - Mon, 20 Nov 2023 09:22:43 GMT
       x-ms-version:
       - '2022-11-02'
     method: PUT
@@ -81,11 +82,11 @@ interactions:
       content-length:
       - '0'
       date:
-      - Thu, 19 Oct 2023 09:07:32 GMT
+      - Mon, 20 Nov 2023 09:22:44 GMT
       etag:
-      - '"0x8DBD082D4581D4B"'
+      - '"0x8DBE9AA4111FF1C"'
       last-modified:
-      - Thu, 19 Oct 2023 09:07:32 GMT
+      - Mon, 20 Nov 2023 09:22:44 GMT
       server:
       - Windows-Azure-Blob/1.0 Microsoft-HTTPAPI/2.0
       x-ms-version:
@@ -107,10 +108,9 @@ interactions:
       ParameterSetName:
       - -c -f -n --type --if-none-match --account-name --account-key
       User-Agent:
-      - AZURECLI/2.53.0 azsdk-python-storage-blob/12.16.0 Python/3.10.13 (Linux-5.15.0-1047-azure-x86_64-with-glibc2.31)
-        VSTS_7b238909-6802-4b65-b90d-184bca47f458_build_220_0
+      - AZURECLI/2.54.0 (PIP) azsdk-python-storage-blob/12.16.0 Python/3.9.13 (Windows-10-10.0.19045-SP0)
       x-ms-date:
-      - Thu, 19 Oct 2023 09:07:33 GMT
+      - Mon, 20 Nov 2023 09:22:45 GMT
       x-ms-version:
       - '2022-11-02'
     method: HEAD
@@ -120,7 +120,7 @@ interactions:
       string: ''
     headers:
       date:
-      - Thu, 19 Oct 2023 09:07:33 GMT
+      - Mon, 20 Nov 2023 09:22:46 GMT
       server:
       - Windows-Azure-Blob/1.0 Microsoft-HTTPAPI/2.0
       transfer-encoding:
@@ -150,10 +150,9 @@ interactions:
       ParameterSetName:
       - -c -f -n --type --if-none-match --account-name --account-key
       User-Agent:
-      - AZURECLI/2.53.0 azsdk-python-storage-blob/12.16.0 Python/3.10.13 (Linux-5.15.0-1047-azure-x86_64-with-glibc2.31)
-        VSTS_7b238909-6802-4b65-b90d-184bca47f458_build_220_0
+      - AZURECLI/2.54.0 (PIP) azsdk-python-storage-blob/12.16.0 Python/3.9.13 (Windows-10-10.0.19045-SP0)
       x-ms-date:
-      - Thu, 19 Oct 2023 09:07:33 GMT
+      - Mon, 20 Nov 2023 09:22:46 GMT
       x-ms-version:
       - '2022-11-02'
     method: PUT
@@ -161,14 +160,14 @@ interactions:
   response:
     body:
       string: "\uFEFF<?xml version=\"1.0\" encoding=\"utf-8\"?><Error><Code>BlobNotFound</Code><Message>The
-        specified blob does not exist.\nRequestId:90c62ec2-d01e-0067-6b6b-02e754000000\nTime:2023-10-19T09:07:33.5251859Z</Message></Error>"
+        specified blob does not exist.\nRequestId:8a0e2503-801e-001e-5f93-1bb6bb000000\nTime:2023-11-20T09:22:47.2402691Z</Message></Error>"
     headers:
       content-length:
       - '213'
       content-type:
       - application/xml
       date:
-      - Thu, 19 Oct 2023 09:07:33 GMT
+      - Mon, 20 Nov 2023 09:22:46 GMT
       server:
       - Windows-Azure-Blob/1.0 Microsoft-HTTPAPI/2.0
       x-ms-error-code:
@@ -194,12 +193,11 @@ interactions:
       ParameterSetName:
       - -c -f -n --type --if-none-match --account-name --account-key
       User-Agent:
-      - AZURECLI/2.53.0 azsdk-python-storage-blob/12.16.0 Python/3.10.13 (Linux-5.15.0-1047-azure-x86_64-with-glibc2.31)
-        VSTS_7b238909-6802-4b65-b90d-184bca47f458_build_220_0
+      - AZURECLI/2.54.0 (PIP) azsdk-python-storage-blob/12.16.0 Python/3.9.13 (Windows-10-10.0.19045-SP0)
       x-ms-blob-type:
       - AppendBlob
       x-ms-date:
-      - Thu, 19 Oct 2023 09:07:33 GMT
+      - Mon, 20 Nov 2023 09:22:47 GMT
       x-ms-version:
       - '2022-11-02'
     method: PUT
@@ -211,11 +209,11 @@ interactions:
       content-length:
       - '0'
       date:
-      - Thu, 19 Oct 2023 09:07:33 GMT
+      - Mon, 20 Nov 2023 09:22:48 GMT
       etag:
-      - '"0x8DBD082D4B4A483"'
+      - '"0x8DBE9AA4316C992"'
       last-modified:
-      - Thu, 19 Oct 2023 09:07:33 GMT
+      - Mon, 20 Nov 2023 09:22:48 GMT
       server:
       - Windows-Azure-Blob/1.0 Microsoft-HTTPAPI/2.0
       x-ms-request-server-encrypted:
@@ -243,10 +241,9 @@ interactions:
       ParameterSetName:
       - -c -f -n --type --if-none-match --account-name --account-key
       User-Agent:
-      - AZURECLI/2.53.0 azsdk-python-storage-blob/12.16.0 Python/3.10.13 (Linux-5.15.0-1047-azure-x86_64-with-glibc2.31)
-        VSTS_7b238909-6802-4b65-b90d-184bca47f458_build_220_0
+      - AZURECLI/2.54.0 (PIP) azsdk-python-storage-blob/12.16.0 Python/3.9.13 (Windows-10-10.0.19045-SP0)
       x-ms-date:
-      - Thu, 19 Oct 2023 09:07:33 GMT
+      - Mon, 20 Nov 2023 09:22:48 GMT
       x-ms-version:
       - '2022-11-02'
     method: PUT
@@ -258,11 +255,11 @@ interactions:
       content-length:
       - '0'
       date:
-      - Thu, 19 Oct 2023 09:07:33 GMT
+      - Mon, 20 Nov 2023 09:22:48 GMT
       etag:
-      - '"0x8DBD082D4BF9F58"'
+      - '"0x8DBE9AA43B710E3"'
       last-modified:
-      - Thu, 19 Oct 2023 09:07:33 GMT
+      - Mon, 20 Nov 2023 09:22:49 GMT
       server:
       - Windows-Azure-Blob/1.0 Microsoft-HTTPAPI/2.0
       x-ms-blob-append-offset:
@@ -292,10 +289,9 @@ interactions:
       ParameterSetName:
       - -c --account-name --account-key
       User-Agent:
-      - AZURECLI/2.53.0 azsdk-python-storage-blob/12.16.0 Python/3.10.13 (Linux-5.15.0-1047-azure-x86_64-with-glibc2.31)
-        VSTS_7b238909-6802-4b65-b90d-184bca47f458_build_220_0
+      - AZURECLI/2.54.0 (PIP) azsdk-python-storage-blob/12.16.0 Python/3.9.13 (Windows-10-10.0.19045-SP0)
       x-ms-date:
-      - Thu, 19 Oct 2023 09:07:33 GMT
+      - Mon, 20 Nov 2023 09:22:49 GMT
       x-ms-version:
       - '2022-11-02'
     method: GET
@@ -303,9 +299,9 @@ interactions:
   response:
     body:
       string: "\uFEFF<?xml version=\"1.0\" encoding=\"utf-8\"?><EnumerationResults
-        ServiceEndpoint=\"https://clitest000002.blob.core.windows.net/\" ContainerName=\"cont000003\"><MaxResults>5000</MaxResults><Blobs><Blob><Name>blob000004</Name><Properties><Creation-Time>Thu,
-        19 Oct 2023 09:07:33 GMT</Creation-Time><Last-Modified>Thu, 19 Oct 2023 09:07:33
-        GMT</Last-Modified><Etag>0x8DBD082D4BF9F58</Etag><Content-Length>1024</Content-Length><Content-Type>application/octet-stream</Content-Type><Content-Encoding
+        ServiceEndpoint=\"https://clitest000002.blob.core.windows.net/\" ContainerName=\"cont000003\"><MaxResults>5000</MaxResults><Blobs><Blob><Name>blob000004</Name><Properties><Creation-Time>Mon,
+        20 Nov 2023 09:22:48 GMT</Creation-Time><Last-Modified>Mon, 20 Nov 2023 09:22:49
+        GMT</Last-Modified><Etag>0x8DBE9AA43B710E3</Etag><Content-Length>1024</Content-Length><Content-Type>application/octet-stream</Content-Type><Content-Encoding
         /><Content-Language /><Content-CRC64 /><Content-MD5 /><Cache-Control /><Content-Disposition
         /><BlobType>AppendBlob</BlobType><LeaseStatus>unlocked</LeaseStatus><LeaseState>available</LeaseState><ServerEncrypted>true</ServerEncrypted></Properties><OrMetadata
         /></Blob></Blobs><NextMarker /></EnumerationResults>"
@@ -313,7 +309,7 @@ interactions:
       content-type:
       - application/xml
       date:
-      - Thu, 19 Oct 2023 09:07:33 GMT
+      - Mon, 20 Nov 2023 09:22:49 GMT
       server:
       - Windows-Azure-Blob/1.0 Microsoft-HTTPAPI/2.0
       transfer-encoding:
@@ -337,10 +333,9 @@ interactions:
       ParameterSetName:
       - -c -f -n --type --if-none-match --account-name --account-key
       User-Agent:
-      - AZURECLI/2.53.0 azsdk-python-storage-blob/12.16.0 Python/3.10.13 (Linux-5.15.0-1047-azure-x86_64-with-glibc2.31)
-        VSTS_7b238909-6802-4b65-b90d-184bca47f458_build_220_0
+      - AZURECLI/2.54.0 (PIP) azsdk-python-storage-blob/12.16.0 Python/3.9.13 (Windows-10-10.0.19045-SP0)
       x-ms-date:
-      - Thu, 19 Oct 2023 09:07:34 GMT
+      - Mon, 20 Nov 2023 09:22:50 GMT
       x-ms-version:
       - '2022-11-02'
     method: HEAD
@@ -356,11 +351,11 @@ interactions:
       content-type:
       - application/octet-stream
       date:
-      - Thu, 19 Oct 2023 09:07:33 GMT
+      - Mon, 20 Nov 2023 09:22:51 GMT
       etag:
-      - '"0x8DBD082D4BF9F58"'
+      - '"0x8DBE9AA43B710E3"'
       last-modified:
-      - Thu, 19 Oct 2023 09:07:33 GMT
+      - Mon, 20 Nov 2023 09:22:49 GMT
       server:
       - Windows-Azure-Blob/1.0 Microsoft-HTTPAPI/2.0
       x-ms-blob-committed-block-count:
@@ -368,7 +363,7 @@ interactions:
       x-ms-blob-type:
       - AppendBlob
       x-ms-creation-time:
-      - Thu, 19 Oct 2023 09:07:33 GMT
+      - Mon, 20 Nov 2023 09:22:48 GMT
       x-ms-lease-state:
       - available
       x-ms-lease-status:
@@ -396,10 +391,9 @@ interactions:
       ParameterSetName:
       - -c -f -n --type --if-none-match --account-name --account-key
       User-Agent:
-      - AZURECLI/2.53.0 azsdk-python-storage-blob/12.16.0 Python/3.10.13 (Linux-5.15.0-1047-azure-x86_64-with-glibc2.31)
-        VSTS_7b238909-6802-4b65-b90d-184bca47f458_build_220_0
+      - AZURECLI/2.54.0 (PIP) azsdk-python-storage-blob/12.16.0 Python/3.9.13 (Windows-10-10.0.19045-SP0)
       x-ms-date:
-      - Thu, 19 Oct 2023 09:07:34 GMT
+      - Mon, 20 Nov 2023 09:22:51 GMT
       x-ms-version:
       - '2022-11-02'
     method: HEAD
@@ -409,7 +403,7 @@ interactions:
       string: ''
     headers:
       date:
-      - Thu, 19 Oct 2023 09:07:33 GMT
+      - Mon, 20 Nov 2023 09:22:52 GMT
       server:
       - Windows-Azure-Blob/1.0 Microsoft-HTTPAPI/2.0
       transfer-encoding:
